# src/main/java/com/nisum/userapi/controller/UserController.java
@@ -1,12 +1,10 @@
 package com.nisum.userapi.controller;
 
 import com.nisum.userapi.api.UsersApi;
-import com.nisum.userapi.dto.UserPatchRequest;
 import com.nisum.userapi.dto.UserRequest;
 import com.nisum.userapi.dto.UserResponse;
 import com.nisum.userapi.mapper.UserMapper;
 import com.nisum.userapi.service.UserService;
-import com.nisum.userapi.service.PhoneService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
@@ -20,13 +18,12 @@ import java.util.UUID;
 @RequiredArgsConstructor
 public class UserController implements UsersApi {
     private final UserService userService;
-    private final PhoneService phoneService;
     private final UserMapper mapper;
 
     @Override
     public Mono<ResponseEntity<UserResponse>> createUser(Mono<UserRequest> userRequest, ServerWebExchange exchange) {
         return userRequest
-                .map(request -> mapper.toEntity(request))
+                .map(mapper::toEntity)
                 .flatMap(userService::create)
                 .map(mapper::toResponse)
                 .map(ResponseEntity::ok);
@@ -35,24 +32,14 @@ public class UserController implements UsersApi {
     @Override
     public Mono<ResponseEntity<Flux<UserResponse>>> listUsers(ServerWebExchange exchange) {
         return Mono.just(
-                ResponseEntity.ok(
-                        userService.list()
-                                .flatMap(user ->
-                                        phoneService.getByUserId(user.getId())
-                                                .collectList()
-                                                .map(phones -> {
-                                                    user.setPhones(phones);
-                                                    return user;
-                                                })
-                                )
-                                .map(mapper::toResponse)
-                )
+                ResponseEntity.ok(userService.list().map(mapper::toResponse))
         );
     }
 
     @Override
-    public Mono<ResponseEntity<UserResponse>> patchUser(UUID id, Mono<UserPatchRequest> userPatchRequest, ServerWebExchange exchange) {
-        return userPatchRequest
+    public Mono<ResponseEntity<UserResponse>> patchUser(UUID id, Mono<UserRequest> userRequest, ServerWebExchange exchange) {
+        return userRequest
+                .map(mapper::toEntity)
                 .flatMap(patch -> userService.patch(id, patch))
                 .map(mapper::toResponse)
                 .map(ResponseEntity::ok);
