# src/main/resources/openapi.yaml
@@ -126,7 +126,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/UserPatchRequest'
+              $ref: '#/components/schemas/UserRequest'
             examples:
               ejemplo:
                 value:
@@ -181,7 +181,6 @@ components:
         format: uuid
 
   schemas:
-
     UserRequest:
       type: object
       required: [name, email, password, phones]
@@ -200,22 +199,6 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/PhoneRequest'
-
-    UserPatchRequest:
-      type: object
-      properties:
-        name:
-          type: string
-        email:
-          type: string
-          format: email
-        password:
-          type: string
-        phones:
-          type: array
-          items:
-            $ref: '#/components/schemas/PhoneRequest'
-
     PhoneRequest:
       type: object
       required: [number, citycode, contrycode]
@@ -229,7 +212,6 @@ components:
         contrycode:
           type: string
           example: "57"
-
     UserResponse:
       type: object
       properties:
@@ -257,7 +239,6 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/PhoneRequest'
-
     ErrorResponse:
       type: object
       properties:
@@ -265,7 +246,6 @@ components:
           type: string
 
   responses:
-
     BadRequest:
       description: Solicitud inválida
       content:
